added another div

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,30 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body class="bg-gray-200">
-    <div>
-      <div>Nav</div>
+    <div class="flex">
+        <!-- side navbar -->
+      <div class="bg-indigo-900 w-64">
+          <div class="bg-indigo-800">
+
+              <div class="uppercase text-gray-200 p-5 text-xl font-bold">Super corp
+             </div>
+          </div>
+         
+          <div>
+              <div class="p-5 uppercase text-gray-200 text-xs font-bold">pages</div>
+          </div>
+          <div class="flex">
+              <div>
+                  <img src="images/" alt="">
+              </div>
+              <div>Dashboard</div>
+          </div>
+        </div>
+      <!-- side navbar -->
+
+      <!-- main area -->
       <div>Main content</div>
+      <!-- main area -->
     </div>
   </body>
 </html>
