--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,47 @@
           <div>
               <div class="p-5 uppercase text-gray-200 text-xs font-bold">pages</div>
           </div>
-          <div class="flex">
+          <div class="flex m-5 mt-2">
               <div>
-                  <img src="images/" alt="">
+                  <img class="w-5 h-5" src="images/dashboard.png" alt="">
               </div>
-              <div>Dashboard</div>
+              <div class="mx-3 text-sm text-gray-100">Dashboard</div>
+          </div>
+          <div class="flex m-5 mt-2">
+              <div>
+                  <img class="w-5 h-5" src="images/customers.png" alt="">
+              </div>
+              <div class="mx-3 text-sm text-gray-100">customers</div>
+          </div>
+          <div class="flex m-5 mt-2">
+              <div>
+                  <img class="w-5 h-5" src="images/orders.png" alt="">
+              </div>
+              <div class="mx-3 text-sm text-gray-100">orders</div>
+          </div>
+          <div class="flex m-5 mt-2">
+              <div>
+                  <img class="w-5 h-5" src="images/campaign.png" alt="">
+              </div>
+              <div class="mx-3 text-sm text-gray-100">campaigns</div>
+          </div>
+          <div class="flex m-5 mt-2">
+              <div>
+                  <img class="w-5 h-5" src="images/message.png" alt="">
+              </div>
+              <div class="mx-3 text-sm text-gray-100">messages</div>
+          </div>
+          <div class="flex m-5 mt-2">
+              <div>
+                  <img class="w-5 h-5" src="images/apps.png" alt="">
+              </div>
+              <div class="mx-3 text-sm text-gray-100">apps</div>
+          </div>
+          <div class="flex m-5 mt-2">
+              <div>
+                  <img class="w-5 h-5" src="images/settings.png" alt="">
+              </div>
+              <div class="mx-3 text-sm text-gray-100">settings</div>
           </div>
         </div>
       <!-- side navbar -->
