--- a/index.html
+++ b/index.html
@@ -126,6 +126,137 @@
             <canvas id="Chart4"></canvas>
           </div>
         </div>
+
+        <div class="card-container flex m-7 space-x-6">
+          <div class="bg-white w-1/3 p-4 divide-y divide-gray-200">
+            <div class="font-bold text-l pb-4">Top Countries</div>
+            <canvas class="pt-4" id="Chart5"></canvas>
+          </div>
+          <div class="bg-white w-2/3 p-4">
+            <div class="font-bold text-l pb-4">Top Channels</div>
+            <div class="flex bg-gray-100 p-2 uppercase font-bold text-gray-500 text-sm ">
+              <div class="w-1/3">
+                <div>Source</div>
+              </div>
+              <div class="w-3/4 flex space-x-14 ">
+                <div>Visitors</div>
+                <div>Revenues</div>
+                <div>Sales</div>
+                <div>Conversion</div>
+              </div>
+            </div>
+            <div class="muti-channel-container divide-y divide-gray-200">
+              <div class="single-channel pt-2 pb-2">
+                <div class="flex">
+                  <div class="w-1/3">
+                    <div class="image text flex">
+                      <div>
+                        <img src="images/youtube.png" class="w-8 h-8" alt="">
+                      </div>
+                      <div class="pl-2 pt-1">Youtube</div>
+                    </div>
+                  </div>
+                  <div class="w-3/4 flex space-x-16">
+                    <div>2.4k</div>
+                    <div class="text-green-500">$16,000</div>
+                    <div>340</div>
+                    <div class="text-blue-500">4.9%</div>
+                  </div>
+                </div>
+              </div>
+              <div class="single-channel pt-2 pb-2">
+                <div class="flex">
+                  <div class="w-1/3">
+                    <div class="image text flex">
+                      <div>
+                        <img src="images/facebook.png" class="w-8 h-8" alt="">
+                      </div>
+                      <div class="pl-2 pt-1">Facebook</div>
+                    </div>
+                  </div>
+                  <div class="w-3/4 flex space-x-16">
+                    <div>2.4k</div>
+                    <div class="text-green-500">$16,000</div>
+                    <div>340</div>
+                    <div class="text-blue-500">4.9%</div>
+                  </div>
+                </div>
+              </div>
+              <div class="single-channel pt-2 pb-2">
+                <div class="flex">
+                  <div class="w-1/3">
+                    <div class="image text flex">
+                      <div>
+                        <img src="images/instagram.png" class="w-8 h-8" alt="">
+                      </div>
+                      <div class="pl-2 pt-1">Instagram</div>
+                    </div>
+                  </div>
+                  <div class="w-3/4 flex space-x-16">
+                    <div>2.4k</div>
+                    <div class="text-green-500">$16,000</div>
+                    <div>340</div>
+                    <div class="text-blue-500">4.9%</div>
+                  </div>
+                </div>
+              </div>
+              <div class="single-channel pt-2 pb-2">
+                <div class="flex">
+                  <div class="w-1/3">
+                    <div class="image text flex">
+                      <div>
+                        <img src="images/github.png" class="w-8 h-8" alt="">
+                      </div>
+                      <div class="pl-2 pt-1">Github</div>
+                    </div>
+                  </div>
+                  <div class="w-3/4 flex space-x-16">
+                    <div>2.4k</div>
+                    <div class="text-green-500">$16,000</div>
+                    <div>340</div>
+                    <div class="text-blue-500">4.9%</div>
+                  </div>
+                </div>
+              </div>
+              <div class="single-channel pt-2 pb-2">
+                <div class="flex">
+                  <div class="w-1/3">
+                    <div class="image text flex">
+                      <div>
+                        <img src="images/youtube.png" class="w-8 h-8" alt="">
+                      </div>
+                      <div class="pl-2 pt-1">Youtube</div>
+                    </div>
+                  </div>
+                  <div class="w-3/4 flex space-x-16">
+                    <div>2.4k</div>
+                    <div class="text-green-500">$16,000</div>
+                    <div>340</div>
+                    <div class="text-blue-500">4.9%</div>
+                  </div>
+                </div>
+              </div>
+              <div class="single-channel pt-2 pb-2">
+                <div class="flex">
+                  <div class="w-1/3">
+                    <div class="image text flex">
+                      <div>
+                        <img src="images/facebook.png" class="w-8 h-8" alt="">
+                      </div>
+                      <div class="pl-2 pt-1">Facebook</div>
+                    </div>
+                  </div>
+                  <div class="w-3/4 flex space-x-16">
+                    <div>2.4k</div>
+                    <div class="text-green-500">$16,000</div>
+                    <div>340</div>
+                    <div class="text-blue-500">4.9%</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <!-- main area -->
     </div>
@@ -134,6 +265,7 @@
       var ctx2 = document.getElementById('Chart2').getContext('2d');
       var ctx3 = document.getElementById('Chart3').getContext('2d');
       var ctx4 = document.getElementById('Chart4').getContext('2d');
+      var ctx5 = document.getElementById('Chart5').getContext('2d');
       var myChart = new Chart(ctx, {
     type: 'bar',
     data: {
@@ -169,9 +301,9 @@
     },
     options: {
         scales: {
-            y: {
-                beginAtZero: true
-            }
+            // y: {
+            //     beginAtZero: true
+            // }
         }
     }
 });
@@ -212,9 +344,9 @@ var myChart2 = new Chart(ctx2, {
     },
     options: {
         scales: {
-            y: {
-                beginAtZero: true
-            }
+            // y: {
+            //     beginAtZero: true
+            // }
         }
     }
 });
@@ -255,9 +387,9 @@ var myChart3 = new Chart(ctx3, {
     },
     options: {
         scales: {
-            y: {
-                beginAtZero: true
-            }
+            // y: {
+            //     beginAtZero: true
+            // }
         }
     }
 });
@@ -299,9 +431,51 @@ var myChart4 = new Chart(ctx4, {
     },
     options: {
         scales: {
-            y: {
-                beginAtZero: true
-            }
+            // y: {
+            //     beginAtZero: true
+            // }
+        }
+    }
+});
+
+var myChart5= new Chart(ctx5, {
+    type: 'doughnut',
+    data: {
+        labels: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun'],
+        datasets: [{
+            label: 'Number of sales',
+            data: [11,22,13,74,105,6],
+            backgroundColor: [
+                // 'rgba(255, 99, 132, 0.2)',
+                // 'rgba(54, 162, 235, 0.2)',
+                // 'rgba(255, 206, 86, 0.2)',
+                // 'rgba(75, 192, 192, 0.2)',
+                // 'rgba(153, 102, 255, 0.2)',
+                // 'rgba(255, 159, 64, 0.2)'
+                'rgba(255, 99, 132, 1)',
+                'rgba(54, 162, 235, 1)',
+                'rgba(255, 206, 86, 1)',
+                'rgba(75, 192, 192, 1)',
+                'rgba(153, 102, 255, 1)',
+                'rgba(255, 159, 64, 1)'
+
+            ],
+            borderColor: [
+                'rgba(255, 99, 132, 1)',
+                'rgba(54, 162, 235, 1)',
+                'rgba(255, 206, 86, 1)',
+                'rgba(75, 192, 192, 1)',
+                'rgba(153, 102, 255, 1)',
+                'rgba(255, 159, 64, 1)'
+            ],
+            borderWidth: 1
+        }]
+    },
+    options: {
+        scales: {
+            // y: {
+            //     beginAtZero: true
+            // }
         }
     }
 });
